--- a/sass/_agency.scss
+++ b/sass/_agency.scss
@@ -585,6 +585,7 @@ footer {
 #services p.text-muted {
     width: 200px;
     margin: 0 auto;
+    padding-bottom: 30px;
 }
 
 .copyright {
