--- a/sass/_timeline.scss
+++ b/sass/_timeline.scss
@@ -37,7 +37,7 @@
     float: right;
     position: relative;
     width: 100%;
-    padding: 0 20px 0 100px;
+    padding: 30px 20px 30px 100px;
     text-align: left;
 }
 
